cmake: move ContextCompletion.cc into rbd_internal
- ContextCompletion.cc is used by TrimRequest.cc which is included by
  rbd_internal, it's more natural to put ContextCompletion.cc into
  rbd_internal also. as rbd_internal is the only consumer of this
  translation unit.
- librbd/internal.cc is not referencing any symbols from util.cc, so
  remove this include. and also, do not add
  $<TARGET_OBJECTS:common_util_obj> to librbd.

Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/src/librbd/CMakeLists.txt
+++ b/src/librbd/CMakeLists.txt
@@ -82,7 +82,8 @@ set(librbd_internal_srcs
   operation/SnapshotRollbackRequest.cc
   operation/SnapshotUnprotectRequest.cc
   operation/SnapshotLimitRequest.cc
-  operation/TrimRequest.cc)
+  operation/TrimRequest.cc
+  ${CMAKE_SOURCE_DIR}/src/common/ContextCompletion.cc)
 
 add_library(rbd_api STATIC librbd.cc)
 add_library(rbd_internal STATIC
@@ -93,9 +94,6 @@ if(WITH_LTTNG)
 endif()
 
 add_library(librbd ${CEPH_SHARED}
-  $<TARGET_OBJECTS:osdc_rbd_objs>
-  $<TARGET_OBJECTS:common_util_obj>
-  ${CMAKE_SOURCE_DIR}/src/common/ContextCompletion.cc
   librbd.cc)
 if(LINUX)
   list(APPEND librbd 
